Move ref_count from TypeNode->data to TypeNode

https://bugzilla.gnome.org/show_bug.cgi?id=585375